# treat

./: .env  .gitignore  .npmrc  AIReportCompiler.js  AIReportCompiler.jsx  AllergiesTable.js  AllergiesTable.jsx  App.js  AppointmentsTable.js  AppointmentsTable.jsx  IntegrationTests.cs  LabsTable.js  LabsTable.jsx  MasterFileImport.jsx  MedicationsTable.js  MedicationsTable.jsx  MeditationTab.jsx  Mindfulness.js  NotesTable.jsx  NuGet.Config  Program.cs  README.md  StripePaymentForm.js  StripePaymentForm.jsx  SuccessPage.js  SuccessPage.jsx  SymptomLogger.js  SymptomLogger.jsx  VitalsChart.js  VitalsChart.jsx  VitalsTracker.js  VitalsTracker.jsx  asset-manifest.json  azure-webapps-dotnet-core.yml  build.sh  clean.sh  configure-git.sh  deploy-azure.sh  index.html  launchSettings.json  (+15 more)
.github/workflows/: azure-webapps-dotnet-core.yml
Tests/: UnitTest1.cs  treat.Tests.csproj
cpp/: CMakeLists.txt  main.cpp
public/: index.html
shared/: CMakeLists.txt  library.cpp  shared.cpp
src/: App.js  App.jsx  health.test.js  index.js  style.css  style.js  theme.css  theme.js
static/js/: main.5605278f.js  main.5605278f.js.LICENSE.txt
treat/: Program.cs  treat.csproj
